--- a/frontend/templates/account/password_reset.html
+++ b/frontend/templates/account/password_reset.html
@@ -2,29 +2,29 @@
 
 {% load account %}
 
+{% block title %}&mdash; Password Reset{% endblock %}
+
 {% block full_width_content %}
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
 
-    <h2>Password Reset</h2>
+    <h2 class="mb-5">Password Reset</h2>
 
-    <div class="mt-5">
-        {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-        {% endif %}
+    {% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
 
-        <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
+    <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
 
-        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
 
-            <table class="table table-borderless">
-                {% csrf_token %}
-                {{ form.as_table }}
-            </table>
-
-            <p><input class="btn btn-primary" type="submit" value="Reset My Password" /></p>
-        </form>
+        <table class="table table-borderless">
+            {% csrf_token %}
+            {{ form.as_table }}
+        </table>
 
         <p>Please contact us if you have any trouble resetting your password.</p>
-    </div>
+
+        <p class="clearfix"><input class="btn btn-primary float-end" type="submit" value="Reset My Password" /></p>
+    </form>
 </div>
 {% endblock %}
