--- a/frontend/templates/account/password_reset_done.html
+++ b/frontend/templates/account/password_reset_done.html
@@ -2,16 +2,16 @@
 
 {% load account %}
 
+{% block title %}&mdash; Password Reset{% endblock %}
+
 {% block full_width_content %}
-<div class="container col-5 mt-5 mb-5">
-    <h1>Password Reset</h1>
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
+    <h1 class="mb-5">Password Reset</h1>
 
-    <div class="mt-5">
-        {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-        {% endif %}
+    {% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
 
-        <p>We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.</p>
-    </div>
+    <p>We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.</p>
 </div>
 {% endblock %}
