--- a/frontend/templates/account/password_reset_from_key.html
+++ b/frontend/templates/account/password_reset_from_key.html
@@ -1,11 +1,12 @@
 {% extends "frontend/base.html" %}
 
+{% block title %}&mdash; Change Password{% endblock %}
+
 {% block full_width_content %}
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
 
-    <h2>{% if token_fail %}Bad Token{% else %}Change Password{% endif %}</h2>
+    <h2 class="mb-5">{% if token_fail %}Bad Token{% else %}Change Password{% endif %}</h2>
 
-    <div class="mt-5">
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
         <p>The password reset link was invalid, possibly because it has already been used.
@@ -19,13 +20,12 @@
                     {{ form.as_table }}
                 </table>
 
-                <input class="btn btn-primary" type="submit" name="action" value="Change Password"/>
+                <input class="btn btn-primary float-end" type="submit" name="action" value="Change Password"/>
             </form>
         {% else %}
             <p>Your password is now changed.</p>
         {% endif %}
     {% endif %}
-    </div>
 
 </div>
 {% endblock %}
