--- a/frontend/templates/account/password_reset_from_key_done.html
+++ b/frontend/templates/account/password_reset_from_key_done.html
@@ -1,12 +1,12 @@
 {% extends "frontend/base.html" %}
 
+{% block title %}&mdash; Change Password{% endblock %}
+
 {% block full_width_content %}
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
 
-    <h2>Change Password</h2>
+    <h2 class="mb-5">Change Password</h2>
 
-    <div class="mt-5">
-        <p>Your password is now changed.</p>
-    </div>
+    <p>Your password is now changed.</p>
 </div>
 {% endblock %}
