--- a/data_access/templates/data_access/file_not_found.html
+++ b/data_access/templates/data_access/file_not_found.html
@@ -5,7 +5,7 @@
 
 {% block full_width_content %}
 
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center border p-5 bg-white rounded">
 
 <h2>File was not found</h2>
 
@@ -13,7 +13,7 @@
 
     <p>The file <code>{{ filename }}</code> does not exist at the expected location.</p>
 
-    <p>Please <a href="mailto:{{ contact_email }}">contact the system administrator</a> with this issue.</p>
+    <p>Please <a href="mailto:{{ contact_email }}">contact the system administrator</a> and report this issue.</p>
 
 </div>
 </div>
