--- a/frontend/templates/account/logout.html
+++ b/frontend/templates/account/logout.html
@@ -1,11 +1,11 @@
 {% extends "frontend/base.html" %}
 
+{% block title %}&mdash; Sign out{% endblock %}
+
 {% block full_width_content %}
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center border p-5 bg-white rounded">
 
-<h2>Sign Out</h2>
-
-<div class="mt-5">
+<h2 class="mb-5">Sign Out</h2>
 
 <p>Are you sure you want to sign out?</p>
 
@@ -18,7 +18,6 @@
     <button class="btn btn-primary" type="submit">Sign Out</button>
 </form>
 
-</div>
 </div>
 
 {% endblock %}
