--- a/frontend/templates/account/password_change.html
+++ b/frontend/templates/account/password_change.html
@@ -1,22 +1,22 @@
 {% extends "frontend/base.html" %}
 
+{% block title %}&mdash; Change password{% endblock %}
+
 {% block full_width_content %}
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
 
-    <h2>Change Password</h2>
+    <h2 class="mb-5">Change Password</h2>
 
-    <div class="mt-5">
-        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
 
-            <table class="table table-borderless">
-                {% csrf_token %}
-                {{ form.as_table }}
-            </table>
+        <table class="table table-borderless">
+            {% csrf_token %}
+            {{ form.as_table }}
+        </table>
 
-            <button class="btn btn-primary" type="submit" name="action">Change Password</button>
+        <button class="btn btn-primary" type="submit" name="action">Change Password</button>
 
-            <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-        </form>
-    </div>
+        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    </form>
 </div>
 {% endblock %}
