--- a/frontend/templates/account/password_set.html
+++ b/frontend/templates/account/password_set.html
@@ -1,21 +1,20 @@
 {% extends "frontend/base.html" %}
 
+{% block title %}&mdash; Set Password{% endblock %}
+
 {% block content %}
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
 
-    <h2>Set Password</h2>
+    <h2 class="mb-5">Set Password</h2>
 
-    <div class="mt-5">
+    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+        {% csrf_token %}
 
-        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-            {% csrf_token %}
+        <table class="table table-borderless">
+            {{ form.as_table }}
+        </table>
 
-            <table class="table table-borderless">
-                {{ form.as_table }}
-            </table>
-
-            <input class="btn btn-primary" type="submit" name="action" value="Set Password" />
-        </form>
-    </div>
+        <input class="btn btn-primary" type="submit" name="action" value="Set Password" />
+    </form>
 </div>
 {% endblock %}
