Improve account and swedish user registration flow

--- a/data_access/templates/data_access/access_denied.html
+++ b/data_access/templates/data_access/access_denied.html
@@ -4,7 +4,7 @@
 
 {% block full_width_content %}
 
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
 
 <h2>Content is restricted</h2>
 
