--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -28,12 +28,12 @@
 
         <div class="mb-5 col-6" style="position: relative; overflow: hidden">
             <figure class="figure">
-                {% if data_cube.video_preview and data_cube.video_preview.video_wings %}
+                {% if data_cube.video_preview and data_cube.video_preview.video_core %}
                 <div class="video-container">
                     <div class="video-inlay" style="position: relative">
-                        <video id="video-wings" poster="{{data_cube.previews.full_size.url}}" src="{{data_cube.video_preview.video_wings.url}}" style="border-radius: 5px; max-width: 100%" loop muted playsinline></video>
-                        <div id="video-wings-play-button">
-                            <div style="cursor: pointer; text-shadow: 0 0 2px rgb(0, 0, 0); color: rgb(230, 230, 230); position: absolute; left: 5px; bottom: 0px; font-size: 40px" onclick="const video = document.getElementById('video-wings'); video.play(); video.controls = true; const playButton = document.getElementById('video-wings-play-button'); playButton.style.display = 'None';"
+                        <video id="video-core" poster="{{data_cube.previews.full_size.url}}" src="{{data_cube.video_preview.video_core.url}}" style="border-radius: 5px; max-width: 100%" loop muted playsinline></video>
+                        <div id="video-core-play-button">
+                            <div style="cursor: pointer; text-shadow: 0 0 2px rgb(0, 0, 0); color: rgb(230, 230, 230); position: absolute; left: 5px; bottom: 0px; font-size: 40px" onclick="const video = document.getElementById('video-core'); video.play(); video.controls = true; const playButton = document.getElementById('video-core-play-button'); playButton.style.display = 'None';"
                                  class="bi bi-play-circle-fill"></div>
                         </div>
                     </div>
