--- a/frontend/templates/account/email_confirm.html
+++ b/frontend/templates/account/email_confirm.html
@@ -3,7 +3,7 @@
 {% load account %}
 
 {% block full_width_content %}
-<div class="container col-5 mt-5 mb-5">
+<div class="container col-6 align-self-center p-5 border bg-white rounded">
 
 <h2>Confirm E-mail Address</h2>
 
