--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script src="{% static 'frontend/js/apexcharts.js' %}"></script>
 
 <div class="container">
 
