--- a/frontend/templates/frontend/observation_detail.html
+++ b/frontend/templates/frontend/observation_detail.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script src="{% static 'frontend/js/apexcharts.js' %}"></script>
 
 <div class="container">
 
