Promote SST archive to beta status

--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-between py-3">
         <h1 class="col flex-grow-0 px-5 mt-3 display-4 fs-1 fw-lighter text-nowrap">
             <a class="text-decoration-none text-white" href="{% url 'landing_page' %}">Stockholm SST
-            Archive <span class="text-muted fw-light"><sup><small>&alpha;lpha</small></sup></span></a>
+            Archive <span class="text-muted fw-light"><sup><small>&beta;eta</small></sup></span></a>
         </h1>
 
         <nav class="navbar col">
